syntax = "proto3";

package server_member;

service ServerMemberService {
  rpc AddMember (ChangeMemberRequest) returns (ServerMemberResponse) {}
  rpc RemoveMember (RemoveMemberRequest) returns (ServerMemberResponse) {}
  rpc UpdateMemberRole (ChangeMemberRequest) returns (ServerMemberResponse) {}
  rpc SearchMember (SearchMemberRequest) returns (ServerMemberListResponse) {}
}

message ChangeMemberRequest {
  string serverId = 1;
  string userId = 2;
  string memberId = 3;
  string role = 4;
}

message RemoveMemberRequest {
  string serverId = 1;
  string userId = 2;
  string memberId = 3;
}

message SearchMemberRequest {
  string serverId = 1;
  string query = 2;
}

message ServerMemberResponse {
  string message = 1;
}

message ServerMemberInfo {
  string username = 1;
  string roleName = 2;
  string profilePic = 3;
  string joinedAt = 4;
}

message ServerMemberListResponse {
  string message = 1;
  repeated ServerMemberInfo members = 2;
}